<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo1"
    tools:context=".Pregunta2">


    <TextView
        android:id="@+id/txtPregunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pregunta2"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/fuente3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des8"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/fuente3"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/btnpreguntas"
            android:text="@string/boton1"
            android:fontFamily="@font/fuente3"
            android:id="@+id/SonidoPhp">

        </Button>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/btnpreguntas"
            android:text="@string/boton2"
            android:layout_marginLeft="50dp"
            android:id="@+id/SonidoLaravel"
            android:fontFamily="@font/fuente3"
            >

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        >

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/btnpreguntas"
            android:text="@string/boton3"
            android:id="@+id/SonidoKotlin"
            android:fontFamily="@font/fuente3"


            >

        </Button>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/btnpreguntas"
            android:text="@string/boton4"
            android:layout_marginLeft="50dp"
            android:id="@+id/SonidoJavaScript"
            android:fontFamily="@font/fuente3"
            >

        </Button>

    </LinearLayout>





</LinearLayout>
